tests/NormalTests/paczka1/fuzzy1/81438227.err
Error in line 1: Ct3pxXE7Mq A532 89,8
Error in line 10: qv2FDU S702 93,0
Error in line 33: AQcvUDR S974 9,3
